# myDiscord

./: CMakeLists.txt  import gi.py
client/include/: channel.h  roles.h  test.h  user.h
client/src/: channel.c  client.c  roles.c  user.c
server/include/: db.h  server.h
server/sql/: Example.sql  create_database.sql
server/sql/channels/: create_table_channels.sql
server/sql/direct messages/: create_table_private_conversations.sql  create_table_private_messages
server/sql/login/: create_table_login_history.sql
server/sql/messages/: alter_table_messages.sql  create_table_messages.sql
server/sql/notifications/: create_table_notifications.sql  tables.sql
server/sql/reactions/: create_table_reactions.sql
server/sql/roles/: create_table_roles.sql  create_table_user_roles.sql
server/sql/users/: insert_users_data.sql
server/src/: db.c  main.c  server.c
shared/include/: sockets.h
shared/src/: sockets.c
